2007-05-28  Edward Hervey  <edward@fluendo.com>

	* pitivi/ui/sourcefactories.py:
	Set the proper title and heading on dialog box depending on whether
	there is one OR more files that failed.

2007-05-12  Edward Hervey  <edward@fluendo.com>

	* pitivi/ui/filelisterrordialog.py:
	more cleanup
	* pitivi/ui/sourcefactories.py:
	Emit signal so InfoStub can be properly removed.

2007-05-07  Edward Hervey  <edward@fluendo.com>

	* pitivi/ui/filelisterrordialog.py:
	First try at using gtk.TextView for error information.

2007-05-07  Edward Hervey  <edward@fluendo.com>

	* pitivi/discoverer.py:
	* pitivi/ui/filelisterrordialog.py:
	* pitivi/ui/sourcefactories.py:
	Use the extra information field for 'not-media-file' signals.
	UI cleanups will follow soon.

2007-05-07  Edward Hervey  <edward@fluendo.com>

	* pitivi/ui/sourcefactories.py:
	Sort files from folders when receiving dropped uris.

2007-05-01  Edward Hervey  <edward@fluendo.com>

	* pitivi/Makefile.am:
	* pitivi/threads.py:
	* pitivi/pitivi.py:
	Threading convenience class and class to manage all threads in
	existence during runtime.
	* pitivi/sourcelist.py:
	* pitivi/discoverer.py:
	Add extra argument to not-media-file signal.
	Add error case when we can't figure out the duration of a file.
	* pitivi/ui/filelisterrordialog.glade:
	* pitivi/ui/filelisterrordialog.py:
	Start modifications of importing error reporting dialog.
	* pitivi/ui/sourcefactories.py:
	Spawn separate thread for recursively discovering threads so it doesn't
	block the UI main thread.
	Fixes #432655

2007-05-01  Edward Hervey  <edward@fluendo.com>

	* tests/test_timeline_composition.py:
	Remove dangling whitespaces.

2007-04-30  Edward Hervey  <edward@fluendo.com>

	* pitivi/ui/exportsettingswidget.py:
	whoops :)

2007-04-30  Edward Hervey  <edward@fluendo.com>

	* pitivi/discoverer.py:
	* pitivi/pixmaps/Makefile.am:
	* pitivi/pixmaps/busy.gif:
	* pitivi/sourcelist.py:
	* pitivi/ui/sourcefactories.py:
	Remove buttons in source list.